--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.mast3rplan</groupId>
 	<artifactId>AlphaChest</artifactId>
-	<version>1.8.0</version>
+	<version>1.9.0-SNAPSHOT</version>
 	<name>AlphaChest</name>
 
 	<scm>
