--- a/pom.xml
+++ b/pom.xml
@@ -25,15 +25,7 @@
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>craftbukkit</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		<!-- You have to install a Permissions compatible jar file with: mvn install:install-file 
-			-Dfile=Permissions.jar -DgroupId=com.nijiko.permissions -DartifactId=Permissions 
-			-Dversion=2.0 -Dpackaging=jar -->
-		<dependency>
-			<groupId>com.nijiko.permissions</groupId>
-			<artifactId>Permissions</artifactId>
-			<version>2.0</version>
+			<version>1.1-R4-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
