--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -11,29 +11,29 @@ commands:
         usage: |
               /<command> - Opens your private chest.
               /<command> [player] - Opens someone else's chest.
-        permission: ac.chest
+        permission: alphachest.chest
     clearchest:
         description: Clears the contents of a chest.
         usage: |
               /<command> - Clears your private chest.
               /<command> [player] - Clears someone else's chest.
-        permission: ac.chest
+        permission: alphachest.chest
     savechests:
         description: Saves the chests to disk.
-        permission: ac.save
+        permission: alphachest.save
     workbench:
         aliases: [craft, craftbox, craftingbox]
         description: Opens a virtual workbench.
-        permission: ac.workbench
+        permission: alphachest.workbench
 
 permissions:
-    ac.admin:
+    alphachest.admin:
         description: Allows to open and clear someone else's chest.
         default: op
-    ac.chest:
+    alphachest.chest:
         description: Gives access to the virtual chest.
-    ac.save:
+    alphachest.save:
         description: Allows to save all virtual chests.
         default: op
-    ac.workbench:
+    alphachest.workbench:
         description: Gives access to the virtual workbench.
