--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>net.sradonia.bukkit</groupId>
 	<artifactId>AlphaChest</artifactId>
-	<version>1.10.0-SNAPSHOT</version>
+	<version>1.10.0</version>
 	<name>AlphaChest</name>
 
 	<scm>
@@ -25,7 +25,7 @@
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>craftbukkit</artifactId>
-			<version>1.1-R4-SNAPSHOT</version>
+			<version>1.1-R4</version>
 		</dependency>
 	</dependencies>
 
@@ -34,7 +34,6 @@
 	</properties>
 
 	<build>
-		<finalName>${project.artifactId}</finalName>
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
