--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>net.sradonia.bukkit</groupId>
 	<artifactId>AlphaChest</artifactId>
-	<version>1.11.1</version>
+	<version>1.12.0-SNAPSHOT</version>
 	<name>AlphaChest</name>
 
 	<scm>
@@ -25,7 +25,7 @@
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>craftbukkit</artifactId>
-			<version>1.1-R6</version>
+			<version>1.2.3-R0.1</version>
 		</dependency>
 	</dependencies>
 
