--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>craftbukkit</artifactId>
-			<version>1.2.3-R0.1</version>
+			<version>1.2.5-R5.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
