--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>net.sradonia.bukkit</groupId>
 	<artifactId>AlphaChest</artifactId>
-	<version>1.16.0-SNAPSHOT</version>
+	<version>1.16.0</version>
 	<name>AlphaChest</name>
 
 	<scm>
