--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>craftbukkit</artifactId>
-			<version>1.4.7-R1.0</version>
+			<version>1.7.9-R0.2-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
