Updated various aspects of the plugin
- Made the plugin build with Java 7
- Updated Bukkit API version to 1.8-R0.1-SNAPSHOT
- Updated Maven Compiler Plugin version
- Made plugin depend on Bukkit instead of CraftBukkit as the plugin
doesn't use any of CraftBukkit's features
- Renamed loadFromTextfile() to loadFromTextFile() in InventoryIO
- Deprecated loadFromTextFile() in InventoryIO
- Uppercased Teller Enums
- Separated Commands into their own classes (for organisation purposes)
- Refactored Commands
- Added missing permission to plugin.yml: alphachest.chest.creativeMode
- Made Teller Message colors configurable (new config options added)
- Cleaned up pom.xml
- Cleaned up plugin.yml
- Updated README.md
- General code refactoring

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,16 @@
+# Settings related to plugin messages
+messages:
+  # The prefix to use for plugin messages
+  prefix: '&0[&7AlphaChest&0]'
+  
+  # The color to use for text for specific message types
+  colors:
+    info: '&f'
+    success: '&2'
+    warning: '&6'
+    error: '&4'
+    misc: '&1'
+
 # Interval (in minutes) the plugin should save the changed chests to disk.
 # Setting this to zero disables periodic saving. 
 autosave: 10
