--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	
 	<groupId>net.sradonia.bukkit</groupId>
 	<artifactId>AlphaChest</artifactId>
-	<version>1.18.0</version>
+	<version>1.18.0-SNAPSHOT</version>
 	<name>AlphaChest</name>
 	
 	<properties>
