--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	
 	<groupId>net.sradonia.bukkit</groupId>
 	<artifactId>AlphaChest</artifactId>
-	<version>1.18.0</version>
+	<version>1.18.0-SNAPSHOT</version>
 	<name>AlphaChest</name>
 	
 	<properties>
@@ -49,7 +49,7 @@
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
-			<version>1.8-R0.1-SNAPSHOT</version>
+			<version>1.8.3-R0.1-SNAPSHOT</version>
 			<type>jar</type>
 			<scope>provided</scope>
 		</dependency>
