New features and general refactoring

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -16,7 +16,7 @@ messages:
 autosave: 10
 
 # Set this to true to suppress log messages while auto-saving chests.
-silentAutosave: false
+silent-autosave: false
 
 # Set this to true to clear a player's chest on death if he does not have the "alphachest.keepOnDeath" permission.
 clearOnDeath: false
