--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ version: ${project.version}
 description: Plugin that allows you to have virtual private chests.
 author: kroimon
 
-main: net.sradonia.bukkit.alphachest.AlphaChestPlugin
+main: net.sradonia.bukkit.alphachest.AlphaChest
 
 commands:
   chest:
