added useAsync to the config

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -23,3 +23,5 @@ clearOnDeath: false
 
 # Set this to true to drop the contents of the player's chest on death if he does not have the "alphachest.keepOnDeath" permission.
 dropOnDeath: false
+
+useAsync: true
